--- a/src/app/modules/medical-general/medical-general.component.html
+++ b/src/app/modules/medical-general/medical-general.component.html
@@ -2,7 +2,37 @@
         <ngb-tabset>
             <ngb-tab title="Personal Information">
                 <ng-template ngbTabContent>
-                    <p>Raw denim you probably haven't heard of them jean shorts Austin</p>
+                    <fieldset class="container">
+                        <div class="row">
+                            <div class="col-12 col-sm-6 col-lg-4">
+                                <div class="form-group">
+                                    <label>
+                                        Pais
+                                    </label>
+                                    <input type="text" class="form-control">
+                                    <span class="invalid-feedback">Aquest camp és requerit</span>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6 col-lg-4">
+                                <div class="form-group">
+                                    <label>
+                                        Caducitat
+                                    </label>
+                                    <input type="text" class="form-control">
+                                    <span class="invalid-feedback">Aquest camp és requerit</span>
+                                </div>
+                            </div>
+                            <div class="col-12 col-sm-6 col-lg-4">
+                                <div class="form-group">
+                                    <label>
+                                        Caducitat
+                                    </label>
+                                    <input type="text" class="form-control">
+                                    <span class="invalid-feedback">Aquest camp és requerit</span>
+                                </div>
+                            </div>
+                        </div>
+                    </fieldset>
                 </ng-template>
             </ngb-tab>
             <ngb-tab title="Career">
