ADD Styles and animations angular slider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-pre-header></app-pre-header>
+<app-slider></app-slider>
 <app-medical-general></app-medical-general>
 <app-footer></app-footer>
