--- a/src/app/core/components/slider/slider.component.html
+++ b/src/app/core/components/slider/slider.component.html
@@ -1,3 +1,10 @@
-<p>
-  slider works!
-</p>
+<div class="container">
+    <div [@sliderAnimation]="">
+        <div class="col" *ngFor="let item of items">
+            <h3 class="headline-3">Angular Animation</h3>
+            <small class="body-3">I think Coursetro is one of the best</small>
+            <p class="body-1">I think Coursetro is one of the best learning resources online for Angular</p>
+        </div>
+    </div>
+</div>
+
