--- a/src/app/modules/medical-general/components/personal-information/personal-information.component.html
+++ b/src/app/modules/medical-general/components/personal-information/personal-information.component.html
@@ -1,3 +1,122 @@
-<p>
-  personal-information works!
-</p>
+<div class="container">
+    <div class="content-persons">
+        <div class="form-group row">
+            <label class="col-2 col-form-label">
+                Títol acte
+            </label>
+            <div class="col-10">
+                <input type="text"
+                    class="form-control">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-2 col-form-label">
+                Descripció acte
+            </label>
+            <div class="col-10">
+                <textarea type="text"
+                    class="form-control">
+                </textarea>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <div class="form-group row">
+                    <label class="col-4 col-form-label"
+                    for="startAt">
+                    Data Inici
+                    </label>
+                    <div class="col-8">
+                            <input type="text"
+                            class="form-control">
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div>
+                    <div class="form-group row">
+                        <label class=" col-4 col-form-label">
+                            Data Fi
+                        </label>
+                        <div class="col-8">
+                            <input type="text"
+                                class="form-control">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-2 col-form-label">
+                Classificació horitzontal
+            </label>
+            <div class="col-10">
+            <input type="text"
+                class="form-control">
+            </div>
+        </div>
+        <div class="row form-group">
+            <label class="col-2 col-form-label">
+                Estat
+            </label>
+            <div class="col-10">
+                <input type="text"
+                    class="form-control">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-2 col-form-label">
+                Tipus acte
+            </label>
+            <div class="col-5">
+                <input type="text"
+                    class="form-control">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-2 col-form-label">
+                    Tipus visita
+            </label>
+            <div class="col-10">
+                <input type="text"
+                    class="form-control">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-2 col-form-label">
+                Classificació
+            </label>
+            <div class="col-5">
+                <input type="text"
+                    class="form-control">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-2">
+                Nº assistents
+            </label>
+            <div class="col-10">
+                <input type="number"
+                    class="form-control">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-2 col-form-label">
+                Idioma
+            </label>
+            <div class="col-10">
+                <input type="number"
+                    class="form-control">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-2">
+                Petti responsable
+            </label>
+            <div class="col-10">
+                <input type="number"
+                    class="form-control">
+            </div>
+        </div>
+    </div>
+</div>
