ADD Config structure modules, styles, json config and fontawesome

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
+<app-sic-pre-header></app-sic-pre-header>
+<app-sic-header></app-sic-header>
 <app-pre-header></app-pre-header>
 <app-slider></app-slider>
 <app-medical-general></app-medical-general>
+<!-- <app-table></app-table> -->
 <app-footer></app-footer>
+<app-sic-footer></app-sic-footer>
