ADD Service carousel and json http

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 <app-pre-header></app-pre-header>
 <app-slider></app-slider>
 <app-medical-general></app-medical-general>
-<!-- <app-table></app-table> -->
+<app-carousel></app-carousel>
 <app-footer></app-footer>
 <app-sic-footer></app-sic-footer>
